--- a/007-tag-attributes/04-paragraph element/index.html
+++ b/007-tag-attributes/04-paragraph element/index.html
@@ -3,22 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <style>
-div{
-    width:100px;
-    height: 100px;
-    background-color: yellow;
-
-}
-
-    </style>
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
+<!--p.happiness{Happy!}-->
 
+<p class="happiness">HAPPY!</p>
 
-
-<div></div>
+<div class="happiness">again</div>
 
 </body>
 </html>
