--- a/008-relative-vs-absoloute-urls/index.html
+++ b/008-relative-vs-absoloute-urls/index.html
@@ -3,22 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <style>
-div{
-    width:100px;
-    height: 100px;
-    background-color: yellow;
-
-}
-
-    </style>
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
 
+<!--relative-->
+<img src="puppy.jpg">
 
+<!--relative-->
+<img src="img/dog.jpg">
 
-<div></div>
+<!--relative-->
+<img src=>
+
 
 </body>
 </html>
